# web3-keygen

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  types.rs
src/balances/: checker.rs
src/dashboard/: mod.rs
src/deploy/: mod.rs
src/generator/: aptos.rs  bitcoin.rs  cosmos.rs  ethereum.rs  mod.rs  solana.rs  starknet.rs  sui.rs  tron.rs
src/server/: mod.rs
src/utils/: crypto.rs  encoding.rs
