[package]
name = "web3-keygen"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
getrandom = "0.2"
secp256k1 = { version = "0.29", features = ["global-context", "rand"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
bech32 = "0.11"
hex = "0.4"
blake2 = "0.10"
rand_core = "0.6"
starknet-crypto = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hmac = "0.12"
futures = "0.3"
num_cpus = "1"
